--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,16 +17,17 @@ dependencies:
   google_fonts:
   # flutter_google_street_view:
   google_maps_routes: ^1.1.2
-  firebase_core: ^3.13.0
+  # firebase_core: ^3.13.0
   # firebase_auth: ^5.4.0
-  cloud_firestore: ^5.6.6
-  firebase_storage: ^12.4.5
+  # firebase_auth: ^5.5.2
+  # cloud_firestore: ^5.6.6
+  # firebase_storage: ^12.4.5
   geolocator: ^14.0.0
   geocoding: ^3.0.0
   flutter_typeahead: ^5.2.0
-  firebase_auth: ^5.5.2
   hugeicons: ^0.0.10
   flex_color_scheme: ^8.2.0
+  supabase_flutter: ^2.8.4
 
 dev_dependencies:
   flutter_test:
