--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -53,6 +53,9 @@
 	<key>io.flutter.embedded_views_preview</key>
 	<true/>
 
+	<key>NSMotionUsageDescription</key>
+	<string>This app uses motion sensors to detect if you're walking, running, or in a vehicle to calculate calories accurately.</string>
+
 	<key>NSAppTransportSecurity</key>
 	<dict>
 		<key>NSAllowsArbitraryLoads</key>
