--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   flutter_activity_recognition: ^4.0.0
   flutter_foreground_task: ^9.1.0
   permission_handler: ^12.0.0+1
+  cached_network_image:
 
 dev_dependencies:
   flutter_test:
