--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_foreground_task: ^9.1.0
   permission_handler: ^12.0.0+1
   cached_network_image:
+  flutter_keyboard_visibility: ^6.0.0
 
 dev_dependencies:
   flutter_test:
