--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,7 +26,7 @@ dependencies:
   flutter_typeahead: ^5.2.0
   hugeicons: ^0.0.10
   flex_color_scheme: ^8.2.0
-  supabase_flutter: ^2.8.4
+  # supabase_flutter: ^2.8.4
   http:
 
   flutter_activity_recognition: ^4.0.0
