--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,11 +16,11 @@ dependencies:
   provider: ^6.1.4
   google_fonts:
   # flutter_google_street_view:
-  google_maps_routes: ^1.1.2
-  firebase_core: ^3.14.0
-  firebase_auth: ^5.6.0
-  cloud_firestore: ^5.6.9
-  firebase_storage: ^12.4.7
+  # google_maps_routes: ^1.1.2
+  firebase_core: ^4.0.0
+  firebase_auth: ^6.0.0
+  cloud_firestore: ^6.0.0
+  firebase_storage: ^13.0.0
   geolocator: ^14.0.0
   geocoding: ^3.0.0
   flutter_typeahead: ^5.2.0
