Add location approval feature with service, provider, and model implementations; update user history and Info.plist for camera and microphone permissions.

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -40,7 +40,11 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>This app needs access to location when open to show your position on the map.</string>
 	<key>NSMotionUsageDescription</key>
-	<string>This app uses motion sensors to detect if you're walking, running, or in a vehicle to calculate calories accurately.</string>
+	<string>This app uses motion sensors to detect if you&apos;re walking, running, or in a vehicle to calculate calories accurately.</string>
+	<key>NSCameraUsageDescription</key>
+	<string>This app uses camera to upload photos for locations and user profiles</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app uses microphone when using camera</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UIBackgroundModes</key>
