feat: Update keystore configuration and modify terms and conditions last updated date

--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,5 @@ app.*.map.json
 *firebase_options.dart
 /lib/firebase_options.dart
 ios/Runner/GoogleService-Info.plist
+upload-keystore.jks
+release.keystore
