feat: Update Android Gradle plugin version and NDK configuration

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,7 +37,8 @@ android {
     namespace = "com.suptle.campus_mapper"
     // compileSdk = flutter.compileSdkVersion
     compileSdk = 35
-    ndkVersion = flutter.ndkVersion
+    // ndkVersion = flutter.ndkVersion
+    ndkVersion = "27.0.12077973"
 
     compileOptions {
         sourceCompatibility = JavaVersion.VERSION_1_8
