--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: campus_mapper
 description: "Campus Mapper: A Smart Campus Initative to help students navigate effectively on campus."
 publish_to: "none"
-version: 0.1.0
+version: 0.1.1+1
 
 environment:
   sdk: ^3.6.0
