--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: "none"
 version: 0.3.1+3
 
 environment:
-  sdk: ^3.6.0
+  sdk: ^3.8.1
 
 dependencies:
   flutter:
@@ -17,10 +17,10 @@ dependencies:
   google_fonts:
   # flutter_google_street_view:
   # google_maps_routes: ^1.1.2
-  firebase_core: ^4.0.0
-  firebase_auth: ^6.0.0
-  cloud_firestore: ^6.0.0
-  firebase_storage: ^13.0.0
+  firebase_core: 4.0.0
+  firebase_auth: 6.0.0
+  cloud_firestore: 6.0.0
+  firebase_storage: 13.0.0
   geolocator: ^14.0.0
   geocoding: ^3.0.0
   flutter_typeahead: ^5.2.0
