--- a/shorebird.yaml
+++ b/shorebird.yaml
@@ -11,4 +11,4 @@ app_id: ddfb0145-347f-4588-acc4-3bd974bef94f
 # If auto_update: false, you will need to use package:shorebird_code_push to trigger updates.
 # https://pub.dev/packages/shorebird_code_push
 # Uncomment the following line to disable automatic updates.
-# auto_update: false
+auto_update: false
